--- a/http-post/axios-project/ex.css
+++ b/http-post/axios-project/ex.css
@@ -103,6 +103,54 @@ main {
     background-color: rgba(100, 100, 100, 0.7);
 }
 
+
+#movie-cast {
+    padding: 20px;
+    background-color: rgba(97, 96, 96, 0.8);
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+}
+
+#movie-cast h2 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-align: center;
+    color: #ca1212;
+}
+
+.cast-member {
+    width: 200px;
+    margin: 10px;
+    text-align: center;
+    background-color: rgba(120, 120, 120, 0.8);
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.cast-member img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.cast-member h4 {
+    font-size: 18px;
+    margin: 10px 0 5px;
+}
+
+.cast-member p {
+    font-size: 14px;
+    color: #ddd;
+}
+
+/* Responsive Design */
 @media (max-width: 768px) {
     main {
         padding: 10px;
